# cookiecutter-data-science-poetry-template

./: .gitignore  CHANGELOG.md  cookiecutter.json
{{ cookiecutter.__repo_name }}/: .gitignore  pyproject.toml
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: fix_notebook_imports.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: util.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/notebooks/: fix_notebook_imports.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/src/: util.py
{{ cookiecutter.repo_name }}/: .gitignore  README.md
