[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
python-dotenv = "^0.14.0"
pandas = "^1.1.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
